@@ -2714,6 +2714,12 @@
         <altcode>SHB3</altcode>
       </book>
       <book>
+        <id>e1f426ff-e35a-4ddd-a168-11faec92d3b6</id>
+        <name>Schattenhandbuch 4 (German-Only)</name>
+        <translate>Schattenhandbuch 4 (German-Only)</translate>
+        <altcode>SHB4</altcode>
+      </book>
+      <book>
         <id>a1055d3f-7bc1-4ca3-a005-681c54a046a1</id>
         <name>Rigger 5.0</name>
         <translate>Rigger 5.0</translate>
@@ -2862,12 +2868,6 @@
         <name>Datapuls SOTA 2080 (German-Only)</name>
         <translate>Datapuls SOTA 2080 (German-Only)</translate>
         <altcode>SOTG</altcode>
-      </book>
-      <book>
-        <id>3ece5592-c3c1-4cf8-97a2-ef773388289d</id>
-        <name>Datapuls Verschlusssache (German-Only)</name>
-        <translate>Datapuls Verschlusssache (German-Only)</translate>
-        <altcode>DPVG</altcode>
       </book>
       <book>
         <id>e997ea2e-916b-4482-a381-bf8c49cb08ff</id>
