@@ -152,6 +152,7 @@ Data Changes:
 - Added missing content from Datapuls SOX, Der Almanach - Gratisrollenspieltag 2019, and the German versions of Parabotany, Parageology, and Parazoology (all of which are for SR5e).
 - Added missing content from Shadows in Focus: Morocco, Shadows in Focus: Casablanca-Rabat, and Schattenload numbers 2, 3, and 7.
 - Corrected cases where content from Datapuls SOX and Datapuls Österreich were sourced to the collection of Schattenhandbuch 3 instead of their specific books.
+- Corrected the Walther P99 being sourced to Datapuls Verschlusssache instead of to Schattenhandbuch 4 (it is exclusive to that collection and does not appear in the individual books).
 - Armor mods for custom liners have now had their categories renamed to be more generic.
 - Foci, formulae, and magical supplies and compounds will now use "Force" instead of "Rating" where appropriate.
 
